# vulkan-tts

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  download-models.bat  run-tts.bat  run-tts.ps1  sample-korean.txt  sample.txt  voice-clone.txt
.github/workflows/: build-windows.yml
gui/: README.md  index.html  package-lock.json  package.json
gui/src/: App.css  App.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: lib.rs
gui/src/components/: AudioPanel.tsx  AudioPlayer.tsx  ProgressBar.tsx  ProgressRing.tsx  SettingsPanel.tsx  Sidebar.tsx  TTSPanel.tsx  Titlebar.tsx
